<?xml version="1.0"?>
<package format="2">
  <name>object_pose_estimation</name>
  <version>0.1.0</version>
  <description>This package containes numerous examples of how to use SMACH. See the examples directory </description>
  <author>Ronaldson Bellande</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export></export>

</package>
